--- a/style.css
+++ b/style.css
@@ -11,10 +11,6 @@ hr {
 	margin: 10px 0;
 }
 
-h1 {
-	font-family: cursive;  /*TREBUCHET ALGERIAN CENTURY*/
-}
-
 #top {
 	height: 40px;
 }
@@ -29,19 +25,38 @@ h1 {
 
 #wrapper {
 	margin: 10px;
-	width: 100%;
-	height: 100%;
-	background: white;
 }
 
-.main {
-	margin-right: 10px;
-	margin-bottom: 30px;
+#main {
+	display: inline-block;
+	width: 97%;
+}
+
+#right {
+	display: inline-block;
+	float: right;
+	width: 3%;
+	text-align: right;
+}
+
+#right .theme {
+	-webkit-writing-mode: vertical-rl; 
+	writing-mode:tb-rl;
+	border: 1px solid black;
+	padding: 5px;
+	margin-bottom: 5px;
+}
+#right .active {
+	margin-right: 5px;
+}
+
+.topic {
+	padding: 5px;
 	float: left;
-	width: 23.5%;
+	width: 24%;
 }
 
-.main h1 {
+.topic h1 {
 	white-space: pre-wrap; 
 	word-wrap: break-word;
 	margin: 0;
@@ -74,19 +89,19 @@ h1 {
 	box-shadow: 0px 2px 10px black;
 }
 
-.main:nth-child(odd) > .task:nth-child(odd) {
+.topic:nth-child(odd) > .task:nth-child(odd) {
 	background: rgba(0, 120, 0, 0.1);
 }
 
-.main:nth-child(odd) > .task:nth-child(even) {
+.topic:nth-child(odd) > .task:nth-child(even) {
 	background: rgba(120, 0, 0, 0.1);
 }
 
-.main:nth-child(even) > .task:nth-child(odd) {
+.topic:nth-child(even) > .task:nth-child(odd) {
 	background: rgba(120, 0, 0, 0.1);
 }
 
-.main:nth-child(even) > .task:nth-child(even) {
+.topic:nth-child(even) > .task:nth-child(even) {
 	background: rgba(0, 120, 0, 0.1);
 }
 
